fix(core/button): add gap between any elements and button label

--- a/packages/core/src/button/_button.scss
+++ b/packages/core/src/button/_button.scss
@@ -22,7 +22,7 @@ $default-options: (
   padding-x-small: 12px,
   icon-size: 24px,
   icon-size-small: 16px,
-  icon-label-gap-x: 4px,
+  prefix-label-gap-x: 4px,
   outlined-border-width: 1px,
 );
 
@@ -116,15 +116,6 @@ $default-options: (
   }
 }
 
-@mixin _icon-button-size() {
-  padding: 0;
-  width: var(--#{$prefix}-height);
-
-  .#{icon.$prefix} {
-    margin: 0;
-  }
-}
-
 @mixin _size($options) {
   $label-min-width: map.get($options, label-min-width);
   $label-min-width-small: map.get($options, label-min-width-small);
@@ -132,14 +123,11 @@ $default-options: (
   $padding-x-small: map.get($options, padding-x-small);
   $icon-size: map.get($options, icon-size);
   $icon-size-small: map.get($options, icon-size-small);
-  $icon-label-gap-x: map.get($options, icon-label-gap-x);
+  $prefix-label-gap-x: map.get($options, prefix-label-gap-x);
   $outlined-border-width: map.get($options, outlined-border-width);
 
   .#{icon.$prefix} {
     font-size: utils-typography.px-to-rem($icon-size);
-    // For icon on the left of button.
-    margin-left: -#{$icon-label-gap-x};
-    margin-right: $icon-label-gap-x;
   }
 
   @each $size in $sizes {
@@ -168,11 +156,25 @@ $default-options: (
     .#{$prefix}--small & {
       min-width: $label-min-width-small;
     }
+  }
 
-    + .#{icon.$prefix} {
-      // For icon on the right of button.
-      margin-right: -#{$icon-label-gap-x};
-      margin-left: $icon-label-gap-x;
+  > * {
+    &:not(.#{$prefix}__label) {
+      &:first-child {
+        // For element on the left of button.
+        margin-left: -#{$prefix-label-gap-x};
+        margin-right: $prefix-label-gap-x;
+      }
+
+      &:last-child {
+        // For element on the right of button.
+        margin-right: -#{$prefix-label-gap-x};
+        margin-left: $prefix-label-gap-x;
+      }
+
+      &:first-child:last-child {
+        margin: 0;
+      }
     }
   }
 }
@@ -231,7 +233,8 @@ $default-options: (
     }
 
     &--icon {
-      @include _icon-button-size();
+      padding: 0;
+      width: var(--#{$prefix}-height);
     }
   }
 
